<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.company.CreateCompanyFragment">

    <ImageView
        android:id="@+id/iv_register_manager"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="32dp"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"
        android:src="@drawable/signup_company"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Create A New Company"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_register_manager" />

    <TextView
        android:id="@+id/tv_company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Company Name"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_company_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_company_name"
        app:startIconDrawable="@drawable/baseline_company_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_register_company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            tools:ignore="SpeakableTextPresentCheck"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_select_industry_sector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choose Industry Sector"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_company_name" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/til_select_industry_sector"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/tv_select_industry_sector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <AutoCompleteTextView
            android:id="@+id/actv_select_industry_sector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:inputType="none"
            android:maxLines="1"
            android:padding="15dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register_company"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_margin="32dp"
        android:text="Register Company"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_select_industry_sector" />

    <Button
        android:id="@+id/btn_already_have_company"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="I already have a company"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/btn_register_company"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>