...
        app:helperTextTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/actv_add_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="Leave type"
            android:inputType="none"
            android:maxLines="1" />
...
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_add_type" >

        <AutoCompleteTextView
            android:id="@+id/ed_start_date_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:hint="Start date" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/til_end_date"
        android:layout_width="0dp"
...

        <AutoCompleteTextView
            android:id="@+id/ed_end_date_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:hint="End date" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_add_reason"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
...
        app:helperTextTextColor="@color/yellowish_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_end_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_add_reason"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="Add reason"
            android:inputType="textMultiLine"
            android:maxLength="100"
            android:overScrollMode="ifContentScrolls"
            android:padding="15dp"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_request_leave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/request_leave"
        app:layout_constraintTop_toBottomOf="@id/til_add_reason"
        app:layout_constraintEnd_toEndOf="parent"
...
