...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_leave_requests"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="ifContentScrolls" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ProgressBar
...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_leave_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_new_story"
        android:src="@drawable/baseline_add_24"
        android:backgroundTint="?colorAccent"
...
